// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileInsert [mysql] > should compile insert with placeholders and returning per dialect 1`] = `
{
  "params": [
    "1",
    "Alice",
    "a@b.com",
  ],
  "text": "INSERT INTO \`app\`.\`users\` (\`id\`, \`name\`, \`email_address\`) VALUES (?, ?, ?)",
}
`;

exports[`compileInsert [postgres] > should compile insert with placeholders and returning per dialect 1`] = `
{
  "params": [
    "1",
    "Alice",
    "a@b.com",
  ],
  "text": "INSERT INTO "app"."users" ("id", "name", "email_address") VALUES ($1, $2, $3) RETURNING *",
}
`;

exports[`compileInsert [sqlite] > should compile insert with placeholders and returning per dialect 1`] = `
{
  "params": [
    "1",
    "Alice",
    "a@b.com",
  ],
  "text": "INSERT INTO "users" ("id", "name", "email_address") VALUES (?, ?, ?) RETURNING *",
}
`;

exports[`compileInsertBulk [mysql] > should compile a multi-row insert 1`] = `
{
  "params": [
    "1",
    "Alice",
    "a@b.com",
    "2",
    "Bob",
    "b@b.com",
  ],
  "text": "INSERT INTO \`app\`.\`users\` (\`id\`, \`name\`, \`email_address\`) VALUES (?, ?, ?), (?, ?, ?)",
}
`;

exports[`compileInsertBulk [postgres] > should compile a multi-row insert 1`] = `
{
  "params": [
    "1",
    "Alice",
    "a@b.com",
    "2",
    "Bob",
    "b@b.com",
  ],
  "text": "INSERT INTO "app"."users" ("id", "name", "email_address") VALUES ($1, $2, $3), ($4, $5, $6) RETURNING *",
}
`;

exports[`compileInsertBulk [sqlite] > should compile a multi-row insert 1`] = `
{
  "params": [
    "1",
    "Alice",
    "a@b.com",
    "2",
    "Bob",
    "b@b.com",
  ],
  "text": "INSERT INTO "users" ("id", "name", "email_address") VALUES (?, ?, ?), (?, ?, ?) RETURNING *",
}
`;
